      using the --relative (-R) option. (Wayne Davison)

    * Fixed bug that prevented regular files from replacing
      special files and caused a directory in --link-dest or
      --compare-dest to block the creation of a file with the
      same path.  A directory still cannot be replaced by a
      regular file unless --delete specified.  (J.W. Schultz)

  INTERNAL:

    * Eliminated vestigial support for old versions that we stopped
      supporting. (J.W. Schultz)

    * Simplified some of the option-parsing code. (Wayne Davison)

    * Some cleanup made to the exclude code, as well as some new
      defines added to enhance readability. (Wayne Davison)

    * Changed the protocol-version code so that it can interact at a
      lower protocol level than the maximum supported by both sides.
      Added an undocumented option, --protocol=N, to force the value
      we advertise to the other side (primarily for testing purposes).
      (Wayne Davison)


NEWS for rsync version 2.5.6, aka the dwd-between-jobs release
Protocol: 26 (unchanged)
Changes since version 2.5.5:

  ENHANCEMENTS:

    * The --delete-after option now implies --delete.  (Wayne Davison)

    * The --suffix option can now be used with --backup-dir.  (Michael
      Zimmerman)

    * Combining "::" syntax with the -rsh/-e option now uses the
      specified remote-shell as a transport to talk to a (newly-spawned)
      server-daemon.  This allows someone to use daemon features, such
      as modules, over a secure protocol, such as ssh.  (JD Paul)

    * The rsync:// syntax for daemon connections is now accepted in the
      destination field.

    * If the file name given to --include-from or --exclude-from is "-",
      rsync will read from standard input.  (J.W. Schultz)

    * New option --link-dest which is like --compare-dest except that
      unchanged files are hard-linked in to the destination directory.
      (J.W. Schultz)
